sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:13: error: Unmatched closing brace '}' ignored here
      }
      ^DutchFlagAlgo:18: error: Unmatched closing brace '}' ignored here
} 
^DutchFlagAlgo:20: error: eof expected but '}' found.
}
^