sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var apresBleu=0
  var blancRouge= getTaille() -1
  var apresBlanc= getTaille() -1
  while(!estTrie){
  	getCouleur(apresBleu) match{
      case Color.BLUE => apresBleu +=1
      case Color.WHITE => echange(apresBleu,avantBlanc);avantBlanc+=1
      case Color.RED => echange(apresBleu,blancRouge);blancRouge+=1;if(blancRouge<apresBlanc){apresBlanc=blancRouge}
    }
        
      }
    }

  }
}
}